assets/css/style.css
/* ... */
.btn--full-graphic.btn--danger {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #ef4444;

    color: #000000;
}
.btn--full-graphic.btn--danger:hover {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #f44336;
}
.btn--full-graphic.btn--light {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #f9fafb;

    color: #000000;
}
.btn--full-graphic.btn--light:hover {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #f9fafb;
}
.btn--full-graphic.btn--dark {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #1e1e1e;

    color: #000000;
}
.btn--full-graphic.btn--dark:hover {
    background: repeating-linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0.15) 0px,
        rgba(0, 0, 0, 0.15) 1px,
        transparent 1px,
        transparent 4px
    ),
    #1e1e1e;
}

/*GLASSES BUTTONS*/
a.btn--glass, button.btn--glass {
    background: #000000cc;
    backdrop-filter: blur(10px);
    border: 1px solid #22d3ee33;
    box-shadow: 0 0 30px #22d3ee0d;
    border-left-width: 4px;
    font-weight: bold;
    text-transform: uppercase;

    justify-content: center;
}
a.btn--glass:hover, button.btn--glass:hover {
    background-color: #164e6333;
}

.btn--glass.btn--primary {
    border-left-color: #22d3ee;
}
.btn--glass.btn--secondary {
    border-left-color: #6b6b6b;
}
.btn--glass.btn--success {
    border-left-color: #27ae60;
}
.btn--glass.btn--info {
    border-left-color: #00d9ff;
}
.btn--glass.btn--warning {
    border-left-color: #ffcc00;
}
.btn--glass.btn--danger {
    border-left-color: #ef4444;
}
.btn--glass.btn--light {
    border-left-color: #f9fafb;
}
.btn--glass.btn--dark {
    border-left-color: #1e1e1e;
}
.btn--glass.btn--discord {
    border-left-color: #6366f1;
}

/*NAVIGATION*/
@media (min-width: 768px) {
    nav.origin-nav {
        padding: 2rem !important;
        justify-content: flex-end !important;
    }
}
nav.origin-nav {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 50;

    width: 100%;
    padding: 1rem;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    background-color: rgba(0, 0, 0, 0.2);
    backdrop-filter: blur(10px);
    border-bottom: 1px solid rgb(22 78 99 / 0.3);
}
ul.origin-nav-list {
    display: flex;
    gap: 2rem;
}
a.origin-nav-list-link {
    font-size: 0.75rem;
    letter-spacing: 0.2em;
    text-transform: uppercase;

    color: #9ca3af;
    transition: color 0.3s ease;
}
a.origin-nav-list-link:hover {
    color: #ffffff;
}
a.origin-nav-list-active {
    height: 24px;
    color: #22d3ee;
    font-weight: bold;

    display: flex;
    gap: 0.5rem;
    align-items: center;
    justify-content: center;
}
a.origin-nav-list-special {
    height: 24px;

    display: flex;
    gap: 0.5rem;
    align-items: center;
    justify-content: center;
}
div.active-pin {
    width: 0.5rem;
    height: 0.5rem;
    background-color: #22d3ee;
    border-radius: 9999px;

    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
}
span.special-pin {
    display: block;
    
    width: 0px;
    height: 1px;

    background-color: #22d3ee;

    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 300ms;
}

/*ASIDE MENU*/
aside.origin-nav {
    z-index: 50;

    position: relative;

    display: none;
    flex-direction: column;
    flex-shrink: 0;

    width: 16rem;

    border-right-width: 1px;

    background-color: #000000e6;
    border-color: #164e634d;
}
.origin-nav--header {
    padding: 1.5rem;

    border-bottom-width: 1px;
    border-color: #164e634d;
}
.origin-nav--menu {
    padding: 1.5rem 1rem;

    flex: 1 1 0%;

    overflow-y: auto;

    margin-block-start: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
    margin-block-end: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
}
.origin-nav--categorie-title {
    margin-bottom: 0.75rem;
    padding: 0 0.5rem;

    font-size: 10px;
    font-weight: 700;
    text-transform: uppercase;
    letter-spacing: 0.2rem;

    color: #4b5563;
}
.origin-nav--categorie-link {
    display: flex;
    align-items: center;
    gap: 0.75rem;

    padding: 0.5rem 0.75px;
    margin-bottom: 1.5rem;

    font-size: 0.75rem;
    line-height: 1rem;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #9ca3af;

    border-radius: 0.25rem;

    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
}
.origin-nav--categorie-link:hover {
    background-color: #ffffff0d;
    color: #ffffff;
}
.origin-nav--categorie-separator {
    height: 1px;

    background-color: #111827;

    margin-bottom: 1.5rem;
}
.origin-nav--categorie-button {
    display: flex;
    align-items: center;
    gap: 0.75rem;

    width: 100%;

    padding: 0.75rem;

    font-size: 0.75rem;
    line-height: 1rem;
    text-align: left;
    text-transform: uppercase;
    letter-spacing: 0.1em;
    color: #9ca3af;

    border-top-right-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
    border-left-width: 4px;
    border-color: transparent;

    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
}
/* ... */

